# simple-aigc-detect

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  main.py
to_detect/: E-B.txt  example.txt
